# drift-v2

./: Cargo.toml  FINAL_SERUM_ERROR.md  SERUM_COMPATIBILITY_INVESTIGATION.md  SERUM_LIFETIME_FIX.md  SERUM_PUBKEY_FIX.md  SERUM_V2_ERRORS_ANALYSIS.md  rust-toolchain.toml
programs/drift/: Cargo.toml
programs/drift/src/instructions/: admin.rs  if_staker.rs  keeper.rs  optional_accounts.rs  user.rs
programs/drift/src/math/: spot_balance.rs
programs/drift/src/state/: events.rs  load_ref.rs  oracle_map.rs  perp_market_map.rs  revenue_share.rs  revenue_share_map.rs  signed_msg_user.rs  spot_market_map.rs  user_map.rs
programs/openbook_v2/: Cargo.toml
programs/pyth/: Cargo.toml
programs/switchboard/: Cargo.toml
programs/switchboard-on-demand/: Cargo.toml
programs/token_faucet/: Cargo.toml
sdk/: package.json
sdk/src/: driftClient.ts
sdk/src/events/: types.ts
