[package]
name = "drift"
version = "2.143.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift"
path = "src/lib.rs"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet-beta=[]
anchor-test= []
default=["mainnet-beta", "no-entrypoint"]
drift-rs=[]

[dependencies]
anchor-lang = "0.31.0"
solana-program = {version = "=2"}
anchor-spl = "0.31.0"
pyth-client = "0.2.2"
pyth-lazer-solana-contract = { git = "https://github.com/harsh4786/pyth-crosschain", features = ["no-entrypoint"]}
pythnet-sdk = {  git = "https://github.com/harsh4786/pyth-crosschain", features = ["solana-program"]}
pyth-solana-receiver-sdk = { git = "https://github.com/harsh4786/pyth-crosschain"}
bytemuck = { version = "1.4.0" , features = ["derive",  "min_const_generics"]}
borsh = "0.10.3"
hex = "0.4.3"
num-traits = "0.2"
uint = { version = "0.9.1", default-features = false }
num-derive = "0.3"
thiserror = "1.0"
num-integer = "0.1.44"
arrayref = "0.3.6"
base64 = "0.13.0"
serum_dex = { git = "https://github.com/harsh4786/serum-dex", features = ["no-entrypoint"] }
enumflags2 = "0.6.4"
phoenix-v1 = { git = "https://github.com/harsh4786/phoenix-v1-new", features = ["no-entrypoint"] }
solana-security-txt = "1.1.0"
static_assertions = "1.1.0"
drift-macros = { git = "https://github.com/drift-labs/drift-macros.git", rev = "c57d87" }
switchboard = { path = "../switchboard", features = ["no-entrypoint"] }
openbook-v2-light = { path = "../openbook_v2", features = ["no-entrypoint"] }
ahash = "=0.8.12"
switchboard-on-demand = { path = "../switchboard-on-demand", features = ["no-entrypoint"] }
byteorder = "1.4.3"

[dev-dependencies]
bytes = "1.10.0"
pyth = { path = "../pyth", features = ["no-entrypoint"]}
base64 = "0.13.0"


[patch.crates-io]
# Patch to fix version conflicts - force Solana 2.0.0 compatibility
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
# Force all dependencies to use bytemuck 1.16.1 to match Agave v2.0.0
bytemuck = { git = "https://github.com/Lokathor/bytemuck", rev = "02ffd53"}
# Force ALL Solana packages to use v2.0.0 (which uses bytemuck 1.16.1)
solana-sdk = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-program = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-account-decoder = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-client = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-connection-cache = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-metrics = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-net-utils = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-quic-client = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-rpc-client-api = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-streamer = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-transaction-status = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-rpc-client = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-pubsub-client = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-thin-client = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-tpu-client = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-udp-client = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
solana-perf = { git = "https://github.com/anza-xyz/agave", rev = "16de8b75ebcd57022409b422de557dd37b1de8db" }
# Force SPL packages to use v4.0.0 (compatible with Solana 2.0.x)
spl-associated-token-account = { git = "https://github.com/solana-labs/solana-program-library", tag = "associated-token-account-v4.0.0" }
spl-token = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-v6.0.0" }
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v4.0.0" }