[package]
name = "token-faucet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_faucet"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
mainnet-beta=[]
anchor-test= []

[dependencies]
anchor-lang = "0.31"
solana-program = {version = "2.0.15"}
anchor-spl = "0.31"
bytemuck = { version = "1.14.0" }